[test] 일정 수정 구현에 따른 테스트 코드 추가 #12